# phdi

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  actual_result.xml  conf.py  index.rst  lighthouserc.yaml  make.bat  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  sample_config.yaml  setup.cfg  test.py  turbo.json  workspace.code-workspace
.github/: CODEOWNERS  codecov.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 00_geocoding_beta_partner.yaml  01_bug_report.yaml  02_feature_request.yaml  03_support_and_maintenance.yaml  04_issue_template.yaml  05_epic_template.md  06_secret_user_story.md  06_streamline_ecr_user_story.md  07_secret_tech_debt.md  07_streamline_ecr_tech_debt.md  08_secret_design.md  08_streamline_ecr_design.md  DxT-bug-template.md  DxT-qa-ticket-template.md  DxT-spike-template.md  DxT-task-template.md  DxT-user-story-template.md  bug-template-aie.md  bug-template.md  geocoding_beta_partner.md  geocoding_pilot_partner.md  qa-ticket-template-aie.md  qa-ticket-template.md  spike-template-aie.md  spike-template.md  support_and_maintenance.md  task-template-aie.md  task-template.md  user-story-template-aie.md  user-story-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: alert-terraform-changes.yml  buildContainers.yaml  buildReleaseContainers.yaml  container-dibbs-resources.yaml  container-dibbs.yaml  container-ecr-viewer.yaml  container-fhir-converter.yaml  container-ingestion.yaml  container-message-parser.yaml  container-message-refiner.yaml  container-orchestration.yaml  container-record-linkage.yaml  container-tefca-viewer.yaml  container-trigger-code-reference.yaml  container-validation.yaml  createNewRelease.yaml  debug.yaml  deploy.yaml  deployDev.yaml  deploySkylight.yaml  deployTest.yaml  determineChanges.yaml  generate-az-viz.yml  generateAndUpdatePhdiDocs.yaml  generateDocs.yaml  lighthouse.yaml  lint.yaml  lintChangedFiles.yaml  linting-python.yaml  listContainers.yaml  listContainers.yml  octopus.yaml  package-shared-resources.yaml  populate-az-tags.yml  publish.yaml  publishCharts.yaml  publishPyPI.yaml  pullRequestCI.yaml  release.yaml  run-container-workflow.yaml  (+16 more)
charts/: index.yaml  record-linkage-chart-0.1.0.tgz
charts/record-linkage/: values.yaml
containers/: config.env  local-config-example.env  make_openapi_json.py  utils.py
containers/alerts/: Dockerfile  description.md  main.py  requirements.txt  test_alerts.py
containers/dibbs/: Dockerfile  README.md  pyproject.toml  requirements.txt
containers/dibbs-resources/: .npmignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
containers/ecr-viewer/: .env  .env.e2e.test  .env.test  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  (+30 more)
data/: combined.csv  patients-5.csv  patients-nyc-coverted.csv  patients-nyc.csv
data2/: congregate-MPI-scenario19.csv  congregate-MPI.csv  livinghouseless-MPI.csv  test-2.csv  testdob.py
dibbs/: README.md  pyproject.toml
dibbs/dibbs/containers/: base_service.py
docs/: CONTRIBUTING.md  README.md  diagram.mmd  getting_started.md  index.html  rl_sql_postmortem.md  synthea_to_fhir_seed.md
examples/: ECR Data Mart Creation.ipynb  compile_nickname_db.py  parquet_analytics_demo.ipynb
geocode/: requirements.txt
kubernetes/: commands.md  container-service.yaml  deployments.yml  ingress.yaml  ingress.yml  load-balancer.yml  manifest.yaml  record-linkage-chart-0.1.0.tgz  record-linkage-manifest.yml  secrets-example.yaml  secrets.yml
notebooks/: ELR Profiling Template.ipynb
operations/: README.md  migration-notes.md
phdi/: azure.py  conversion.py  fhir.py  geo.py  linkage.py  schemas.py  standardize.py  utils.py
schema-webapp/: 404.html  index.html
shared-resources/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src/lib/phdi-building-blocks/: Makefile  README.md  pyproject.toml
src/lib/phdi-building-blocks/docs/: conf.py  index.rst
src/lib/phdi-building-blocks/phdi/: conversion.py  standardize.py
src/lib/phdi-building-blocks/phdi_building_blocks/: azure.py  azure_blob.py  conversion.py  fhir.py  geo.py  linkage.py  name_standardization.py  phone_standardization.py  schemas.py  standardize.py  utils.py
src/lib/phdi-building-blocks/phdi_building_blocks/fhir/geospatial/: smarty.py
src/lib/phdi-building-blocks/phdi_building_blocks/fhir_wrappers/geospatial/: geospatial.py  smarty.py
src/lib/phdi-building-blocks/phdi_building_blocks/geospatial/: geospatial.py  smarty.py
src/lib/phdi-building-blocks/tests/: test_azure.py  test_azure_blob.py  test_conversion.py  test_fhir.py  test_geo.py  test_linkage.py  test_name_standardization.py  test_phone_standardization.py  test_schemas.py  test_standardize.py  test_utils.py
src/lib/phdi-building-blocks/tests/assets/: FileSingleMessageLongDate.hl7  FileSingleMessageLongTZ.hl7  FileSingleMessageSimple.hl7  patient_bundle.json  patient_with_linking_id_bundle.json
src/lib/phdi-building-blocks/tests/fhir_wrappers/geospatial/: test_fhir_smarty_client.py  test_geospatial.py
src/lib/phdi-building-blocks/tests/geospatial/: test_smarty_geocode_client.py
src/lib/phdi-transforms/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/lib/phdi-transforms/docs/: .gitignore  conf.py  index.rst
src/lib/phdi-transforms/phdi_transforms/: basic.py  geo.py
src/lib/phdi-transforms/tests/: test_basic.py  test_geo.py  test_phdi_transforms.py
tests/: not_valid_json_test.json  test_azure.py  test_conversion.py  test_data_generator.py  test_geo.py  test_linkage.py  test_phdi_building_blocks.py  test_schemas.py  test_standardize.py  test_utils.py
tutorials/: cloud-tutorial.md  conversion-tutorial.md  geospatial-tutorial.md  harmonization-tutorial.md  linkage-tutorial.md  python-update-tutorial.md  release-tutorial.md  tabulation-tutorial.md  transport-tutorial.md
utils/: make_openapi_json.py  package-lock.json  package.json
(+6566 files in other folders)
