[tool.poetry]
name = "phdi"
version = "v1.0.8"
description = "Public health data infrastructure Building Blocks is a library to help public health departments work with their data"
authors = ["Kenneth Chow <kenneth@skylight.digital>", "Brandon Mader <brandon@skylight.digital>", "Spencer Kathol <spencer@skylight.digital>", "Nick Clyde <nclyde@skylight.digital", "Dan Paseltiner <dan@skylight.digital>", "Brady Fausett <brady@skylight.digital>", "Marcelle Goggins <marcelle@skylight.digital", "Nick Bristow <nick@skylight.digital>", "Bryan Britten <bryan@skylight.digital>", "Emma Stephenson <emma@skylight.digital>" , "Gordon Farrell <gordon@skylight.digital>", "Robert Mitchell <rmitchell@skylight.digital>"]
homepage = "https://github.com/CDCgov/phdi"
repository = "https://github.com/CDCgov/phdi"
documentation = "https://cdcgov.github.io/phdi"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
smartystreets-python-sdk = "^4.10.6"
pydantic = "^1.10.9"
fastapi = "^0.96.0"
httpx = "^0.23.3"
hl7 = "^0.4.5"
azure-identity = "^1.10.0"
azure-storage-blob = "^12.12.0"
polling = "^0.3.2"
phonenumbers = "^8.12.48"
pycountry = "^22.3.5"
PyYAML = "^6.0"
pyarrow = "^12.0.0"
pandas = "^1.4.2"
coverage = "^6.4.1"
fhirpathpy = "^0.1.0"
google-auth = "^2.10.0"
google-cloud-storage = "^2.5.0"
jsonschema = "4.16.0"
rapidfuzz = "^2.13.6"
lxml = "^4.9.2"
detect-delimiter = "^0.1.1"
psycopg2-binary = "^2.9.5" 
sqlalchemy = "^2.0.0"
matplotlib = "^3.7.1"
azure-keyvault-secrets = "^4.7.0"
faker = "^18.4.0"

[tool.poetry.dev-dependencies]
pdoc = "^13.0.0"
black = "^23.1.0"
pytest = "^7.1.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--doctest-modules"
