[tool.poetry]
name = "phdi"
version = "v1.5.3"
description = "Public health data infrastructure Building Blocks is a library to help public health departments work with their data"
authors = [
  "Kenneth Chow <kenneth@skylight.digital>",
  "Brandon Mader <brandon@skylight.digital>",
  "Spencer Kathol <spencer@skylight.digital>",
  "Nick Clyde <nclyde@skylight.digital",
  "Dan Paseltiner <dan@skylight.digital>",
  "Brady Fausett <brady@skylight.digital>",
  "Marcelle Goggins <marcelle@skylight.digital",
  "Nick Bristow <nick@skylight.digital>",
  "Bryan Britten <bryan@skylight.digital>",
  "Emma Stephenson <emma@skylight.digital>",
  "Gordon Farrell <gordon@skylight.digital>",
  "Robert Beaty Mitchell V<rmitchell@skylight.digital>",
  "Robert Andre Mitchell<robert.a.mitchell@skylight.digital>",
  "Zedd Shmais<zedd@skylight.digital>",
  "Angela The<angela.the@skylight.digital>",
  "Lina Roth<lina@skylight.digital>",
]
homepage = "https://github.com/CDCgov/phdi"
repository = "https://github.com/CDCgov/phdi"
documentation = "https://cdcgov.github.io/phdi"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
smartystreets-python-sdk = "^4.10.6"
pydantic = "^1.10.9"
fastapi = ">=0.109.1,<0.110"
httpx = "^0.24.0"
hl7 = "^0.4.5"
azure-identity = "^1.10.0"
azure-storage-blob = "^12.12.0"
polling = "^0.3.2"
phonenumbers = "^8.12.48"
pycountry = "^22.3.5"
PyYAML = "^6.0"
pyarrow = ">=12,<15"
pandas = "^1.4.2"
coverage = "^6.4.1"
fhirpathpy = "^0.1.0"
google-auth = "^2.10.0"
google-cloud-storage = "^2.5.0"
jsonschema = "4.16.0"
rapidfuzz = "^2.13.6"
lxml = "^4.9.2"
detect-delimiter = "^0.1.1"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.0"
matplotlib = "^3.7.1"
azure-keyvault-secrets = "^4.7.0"
faker = "^18.4.0"
pillow = "^10.3.0"

[tool.poetry.dev-dependencies]
pdoc = "^14.5.1"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--doctest-modules"

[tool.ruff]
exclude = [".git", ".pytest_cache", "__pycache__", "docs"]
line-length = 88
indent-width = 4
target-version = "py310"
show-fixes = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D102", "D103", "D104", "D105", "D106"] # Defaults

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D"]
"**/__init__.py" = ["D"]
"**/phdi/**/*" = ["D"]
"**/utils/zip-search/**/*" = ["D"]

[tool.ruff.lint.isort]
# The following settings reduce the number of changes from reorder-python-imports
force-single-line = true
# lines-after-imports = 1
order-by-type = false
