[tool.poetry]
name = "dibbs"
version = "v0.0.1-alpha"
description = "Data Ingestion Building Blocks (DIBBs) is a python library to provide utility across the DIBBs pipeline"
authors = [
  "Kenneth Chow <kenneth@skylight.digital>",
  "Brandon Mader <brandon@skylight.digital>",
  "Spencer Kathol <spencer@skylight.digital>",
  "Nick Clyde <nclyde@skylight.digital",
  "Dan Paseltiner <dan@skylight.digital>",
  "Brady Fausett <brady@skylight.digital>",
  "Marcelle Goggins <marcelle@skylight.digital",
  "Nick Bristow <nick@skylight.digital>",
  "Bryan Britten <bryan@skylight.digital>",
  "Emma Stephenson <emma@skylight.digital>",
  "Gordon Farrell <gordon@skylight.digital>",
  "Robert Mitchell <rmitchell@skylight.digital>",
]
homepage = "https://github.com/CDCgov/phdi"
repository = "https://github.com/CDCgov/phdi"
documentation = "https://cdcgov.github.io/phdi"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
fastapi = "^0.96.0"

[tool.poetry.dev-dependencies]
pdoc = "^13.0.0"
black = "^23.1.0"
pytest = "^7.1.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--doctest-modules"
