[tool.poetry]
name = "phdi-building-blocks"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
smartystreets-python-sdk = "^4.10.6"
pydantic = "^1.9.0"
hl7 = "^0.4.5"
azure-identity = "^1.10.0"
azure-storage-blob = "^12.12.0"
polling = "^0.3.2"
phonenumbers = "^8.12.48"
pycountry = "^22.3.5"
PyYAML = "^6.0"
pyarrow = "^8.0.0"
fhirpathpy = {git = "https://github.com/beda-software/fhirpath-py.git"}
pandas = "^1.4.2"
coverage = "^6.4.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
black = "^22.1.0"
pytest = "^7.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--doctest-modules"
