[tool.poetry]
name = "phdi-transforms"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
smartystreets-python-sdk = "^4.10.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
black = "^22.1.0"
pytest = "^7.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--doctest-modules"
